--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Ning's blog "
 author: "Ning GUO"
-description: "I like to log what I've learned, share my thoughts." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Welcome to Ning's blog!" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
