--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Ning's blog "
-author: "Ning GUO"
+author: "Ning Guo"
 description: "Welcome to Ning's blog!" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
